--- a/tox.ini
+++ b/tox.ini
@@ -14,3 +14,8 @@ setenv =
     PYTHONPATH={toxinidir}/example-project
     DJANGO_SETTINGS_MODULE=example-project.cyradm.settings
 passenv = CI DISPLAY DBDIFF_* TEST_* TOX_* SAUCE_*
+
+[testenv:flake8]
+basepython=python3.7
+deps=flake8
+commands=flake8 djcyradm --exclude migrations
