--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = flake8,py{3}-django{3}
 [testenv]
 usedevelop = true
 commands =
-    coverage run $CIRRUS_WORKING_DIR/django-admin test --verbosity 2 djcyradm.tests.tests 
+    coverage run ./django-admin test --verbosity 2 djcyradm.tests.tests 
 deps =
     coverage
     unittest-data-provider
@@ -11,7 +11,7 @@ deps =
     django3: Django >=3.0.0
 setenv =
     PIP_ALLOW_EXTERNAL=true
-    PYTHONPATH=$CIRRUS_WORKING_DIR/example-project
+    PYTHONPATH=${CIRRUS_WORKING_DIR}/example-project
     DJANGO_SETTINGS_MODULE=example-project.cyradm.settings
 
 [testenv:flake8]
