--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = flake8,py{3}-django{3}
 [testenv]
 usedevelop = true
 commands =
-    coverage run ./django-admin test --verbosity 2 djcyradm.tests.tests 
+    coverage run django-admin test --verbosity 2 djcyradm.tests.tests 
 deps =
     coverage
     unittest-data-provider
