--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,8 @@ envlist = flake8,py{3}-django{3}
 [testenv]
 usedevelop = true
 commands =
-    coverage run django-admin test --verbosity 2 djcyradm.tests.tests 
+    coverage run {env:CIRRUS_WORKING_DIR}/django-admin test --verbosity 2 djcyradm.tests.tests 
+
 deps =
     coverage
     unittest-data-provider
@@ -11,9 +12,9 @@ deps =
     django3: Django >=3.0.0
 setenv =
     PIP_ALLOW_EXTERNAL=true
-    PYTHONPATH=${CIRRUS_WORKING_DIR}/example-project
+    PYTHONPATH={env:CIRRUS_WORKING_DIR}/example-project
     DJANGO_SETTINGS_MODULE=example-project.cyradm.settings
-
+    
 [testenv:flake8]
 basepython=python3.7
 deps=flake8
