--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = flake8,py{3}-django{3}
 [testenv]
 usedevelop = true
 commands =
-    coverage run {env:CIRRUS_WORKING_DIR}/django-admin test --verbosity 2 djcyradm.tests.tests 
+    coverage run /usr/local/bin/django-admin test --verbosity 2 djcyradm.tests.tests 
 
 deps =
     coverage
@@ -13,8 +13,8 @@ deps =
 setenv =
     PIP_ALLOW_EXTERNAL=true
     PYTHONPATH={env:CIRRUS_WORKING_DIR}/example-project
-    DJANGO_SETTINGS_MODULE=example-project.cyradm.settings
+    DJANGO_SETTINGS_MODULE=cyradm.settings
 [testenv:flake8]
-basepython=python3.7
+basepython=python3.11
 deps=flake8
 commands=flake8 djcyradm --exclude migrations
